# humanify-server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yaml  docker-compose.yaml  manage.py  mypy.ini  pyproject.toml
.github/actions/setup-python-environment/: action.yaml
.github/workflows/: main.yml
apps/: conftest.py
apps/api/: exception_handlers.py  exceptions.py  middlewares.py  pagination.py  serializers.py
apps/api/v1/: urls.py
apps/image_processing/: admin.py  apps.py  conftest.py  constants.py  data_models.py  managers.py  models.py  services.py  strategies.py  transformations.py  transformers.py  utils.py
apps/image_processing/api/: apis.py  data_models.py  serializers.py  services.py  urls.py  utils.py
apps/image_processing/api/services/: api.py
apps/image_processing/api/tests/: test_services.py  test_utils.py
apps/image_processing/core/: README.md  detectors.py  managers.py  transformations.py  transformers.py
apps/image_processing/migrations/: 0001_initial.py  0002_alter_image_id_alter_imagetransformation_id_and_more.py  0003_alter_processedimage_identifier_and_more.py  0004_rename_image_processingimage.py  0005_alter_transformationbatch_input_image.py
apps/image_processing/src/: README.md  constants.py  data_models.py  detectors.py  managers.py  transformations.py  transformers.py
apps/image_processing/tests/: conftest.py  factories.py  test_managers.py  test_services.py  test_strategies.py  test_transformations.py  test_transformers.py  test_utils.py
apps/image_processing_api/: apis.py  apps.py  constants.py  data_models.py  serializers.py  services.py  tasks.py  urls.py  utils.py
apps/images/: README.md  abstract_classes.py  constants.py  data_models.py  services.py  tasks.py  transformations.py  utils.py
apps/images/processing/: abstract_classes.py  data_models.py  managers.py  transformations.py  transformers.py  utils.py
apps/images/tests/: conftest.py  test_abstract_classes.py  test_services.py  test_tasks.py  test_transformations.py  test_utils.py
apps/places/: admin.py  apis.py  constants.py  models.py  serializers.py  services.py  tasks.py  urls.py
apps/places/migrations/: 0001_initial.py  0002_alter_placetag_name.py  0003_place_suggested_tags.py
apps/places/tests/: factories.py  test_models.py  test_services.py  test_tasks.py
apps/users/: admin.py  apis.py  models.py  serializers.py  services.py  urls.py
apps/users/migrations/: 0001_initial.py  0002_remove_baseuser_created_at_and_more.py
apps/users/tests/: factories.py  test_services.py
humanify_project/: asgi.py  urls.py  wsgi.py
humanify_project/extra_settings/: django_tasks.py  drf_simplejwt.py  drf_spectacular.py  rest_framework.py
humanify_project/settings/: base.py  local.py  prod.py  test.py
(+28 files in other folders)
