[project]
name = "Humanify"
version = "0.1.0"
description = "Humanify"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.6",
    "django-cors-headers>=4.7.0",
    "django-tasks>=0.7.0",
    "djangorestframework>=3.15.2",
    "djangorestframework-simplejwt>=5.5.0",
    "drf-spectacular[sidecar]>=0.28.0",
    "gunicorn>=23.0.0",
    "pillow>=11.1.0",
    "psycopg[binary]>=3.2.6",
    "python-json-logger>=3.3.0",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = [
    "faker>=36.2.2",
    "factory-boy>=3.3.3",
    "coverage>=7.6.12",
    "django-debug-toolbar>=5.0.1 ",
    "pytest-django>=4.10.0",
    "django-stubs[compatible-mypy]>=5.1.3",
    "djangorestframework-stubs[compatible-mypy]>=3.15.3",
    "pre-commit>=3.7.1",
]

[tool.setuptools]
packages = ["apps", "humanify_project"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
